# remote-patient-monitoring-backend

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  nginx.conf  pyproject.toml
apps/chats/: __init__.py  admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/chats/migrations/: 0001_initial.py  0002_data_backfill.py  0003_message.py  0004_add_patient_to_chat.py  0005_add_is_deleted_to_message.py  0006_add_is_edited_to_message.py
apps/diagnoses/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/diagnoses/migrations/: 0001_initial.py  0002_diaryentry_author.py
apps/diagnoses/repositories/: __init__.py  diagnosis_repository.py
apps/diagnoses/services/: __init__.py  diagnosis_service.py
apps/notifications/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/repositories/: __init__.py  channel_config_repository.py  notification_record_repository.py  schedule_repository.py
apps/notifications/services/: __init__.py  email_subscription_service.py  notification_dispatch_service.py  push_subscription_service.py  schedule_service.py
apps/users/: __init__.py  admin.py  apps.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_add_doctor_patient_caregiver_patient.py  0003_user_timezone.py
apps/users/repositories/: __init__.py  patient_repository.py  user_repository.py
apps/users/services/: __init__.py  patient_service.py  user_profile_service.py
config/: __init__.py  asgi.py  celery.py  permissions.py  settings.py  test_settings.py  urls.py  wsgi.py
fixtures/: test_data.json
fixtures/diagnoses/: diagnoses.json  diagnosis_metrics.json  metrics.json  patient_diagnoses.json
fixtures/users/: caregiver_patients.json  doctor_patients.json  users.json
monitoring/: asgi.py  settings.py  test_settings.py  wsgi.py
tests/: __init__.py  conftest.py
tests/chats/: __init__.py  conftest.py  test_consumers.py  test_services.py  test_views.py
tests/config/: __init__.py  test_permissions.py
tests/diagnoses/: __init__.py  conftest.py  test_diagnosis_service.py  test_views.py
tests/notifications/: __init__.py  conftest.py  test_repositories.py  test_services.py
tests/users/: test_managers.py  test_models.py  test_patient_service.py  test_serializers.py  test_services.py  test_user_service.py  test_views.py
users/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
